style css changes

--- a/wp-content/themes/custom-theme/assets/css/style.css
+++ b/wp-content/themes/custom-theme/assets/css/style.css
@@ -553,7 +553,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #37517e;
+  color: red;
 }
 
 .section-title h2::before {
